# PIC32MZW1_Matter_Project

./: README.md  README_MATTER.md
.github/workflows/: bloat_check.yaml  build.yaml  chef.yaml  cirque.yaml  darwin-tests.yaml  darwin.yaml  docbuild.yaml  docker_img.yaml  doxygen.yaml  examples-ameba.yaml  examples-bouffalolab.yaml  examples-cc13x2x7_26x2x7.yaml  examples-cc32xx.yaml  examples-efr32.yaml  examples-esp32.yaml  examples-infineon.yaml  examples-k32w.yaml  examples-linux-arm.yaml  examples-linux-imx.yaml  examples-linux-standalone.yaml  examples-mbed.yaml  examples-mw320.yaml  examples-nrfconnect.yaml  examples-openiotsdk.yaml  examples-qpg.yaml  examples-telink.yaml  examples-tizen.yaml  fixit_rotation.yaml  full-android.yaml  fuzzing-build.yaml  lint.yml  qemu.yaml  release_artifacts.yaml  smoketest-android.yaml  smoketest-darwin.yaml  spell.yml  tests.yaml  todos.yaml  unit_integration_test.yaml  zap_regeneration.yaml  (+1 more)
build_overrides/: wfi32_sdk.gni
config/mchp/: .gn  BUILD.gn  activate.sh  args.gni
config/mchp/toolchain/: BUILD.gn
examples/android/CHIPTool/app/: build.gradle
examples/build_overrides/: wfi32_sdk.gni
examples/lighting-app/bouffalolab/bl602/: board.h
examples/lighting-app/bouffalolab/bl702/: board.h
examples/lighting-app/mchp/pic32mzw1/: .gn  BUILD.gn  README.md  args.gni
examples/lighting-app/mchp/pic32mzw1/include/: AppConfig.h  ButtonHandler.h  CHIPProjectConfig.h
examples/lighting-app/mchp/pic32mzw1/src/: AppTask.cpp  ButtonHandler.cpp  LightingManager.cpp  ZclCallbacks.cpp  main.cpp
examples/lighting-app/silabs/SiWx917/include/: DeviceConfig.h
examples/platform/bouffalolab/bl602/flash_config/: factory_data.dts  partition_cfg_2M.toml  partition_cfg_4M.toml
examples/platform/bouffalolab/bl702/flash_config/: partition_cfg_2M.toml
examples/platform/bouffalolab/common/plat/: uart.c
examples/platform/mchp/pic32mzw1/: LEDWidget.cpp  LEDWidget.h  args.gni  init_wfi32Platform.cpp  init_wfi32Platform.h
examples/thermostat/telink/src/: AppTask.cpp
examples/window-app/telink/: CMakeLists.txt
scripts/examples/: gn_wfi32_example.sh
scripts/tools/silabs/: base_matter_mg12_nvm3.s37  base_matter_mg24_nvm3.s37
src/: BUILD.gn
src/android/CHIPTool/app/: build.gradle
src/app/clusters/color-control-server/: color-control-server.cpp
src/app/server/: Server.cpp
src/lwip/: BUILD.gn
src/lwip/wfi32/: lwipopts.h
src/lwip/wfi32/arch/: cc.h  perf.h
src/platform/: BUILD.gn  device.gni
src/platform/silabs/SiWx917/bluetooth/: rsi_ble_config.h  wfx_sl_ble_init.c  wfx_sl_ble_init.h
src/platform/silabs/efr32/rs911x/: rsi_ble_config.h  wfx_sl_ble_init.c  wfx_sl_ble_init.h
src/platform/wfi32/: AttestationPAI.h  BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  BlePlatformConfig.h  CHIPCryptoPALEcc608.cpp  CHIPCryptoPALEcc608.h  CHIPDevicePlatformConfig.h  CHIPMem-Platform.cpp  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  DnssdImpl.cpp  FactoryDataProvider.cpp  FactoryDataProvider.h  FreeRTOSConfig.h  InetPlatformConfig.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  KeyValueStoreManagerImpl_old_ver.cpp  Logging.cpp  NetworkCommissioningDriver.h  NetworkCommissioningWiFiDriver.cpp  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h  PIC32MZW1Config.cpp  PIC32MZW1Config.h  PIC32MZW1Utils.cpp  PIC32MZW1Utils.h  PlatformManagerImpl.cpp  PlatformManagerImpl_old.cpp  SystemPlatformConfig.h  pic32mzw1-mbedtls-config.h
src/tools/chip-cert/: CertUtils.cpp
