# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("//build_overrides/wfi32_sdk.gni")

#import("//build//toolchain/gcc_toolchain.gni")
import("${build_root}/toolchain/gcc_toolchain.gni")

declare_args() {
  mchp_ar = "xc32-ar"
  mchp_cc = "xc32-gcc"
  mchp_cxx = "xc32-g++"
  mchp_cpu = "P32MZ1025W104132"
  home_dir = ""
  dfp_version = ""
  linker_file = "p32MZ1025W104132.ld"
}

toolchain("wfi32") {
  tool("cc") {
    depfile = "{{output}}.d"
    command = "$mchp_cc -MP -MMD -MF $depfile {{defines}} {{include_dirs}} {{cflags}} {{cflags_c}} -Wno-sign-compare -Wno-conversion -Wno-maybe-uninitialized -Wno-uninitialized -Wno-error=format= -Wno-deprecated-declarations -Wno-missing-field-initializers -Wno-unused-parameter -Wno-unused-variable -Wno-incompatible-pointer-types -Wno-unused-function -Wno-implicit-int -Wno-implicit-fallthrough -Wno-type-limits -Wno-implicit-function-declaration -Wno-shadow -Wno-old-style-declaration -Wno-psabi -Wno-cast-function-type -c {{source}} -o {{output}} -mdfp=\"$home_dir/.mchp_packs/Microchip/PIC32MZ-W_DFP/$dfp_version\""
    depsformat = "gcc"
    description = "CC123 {{output}}"
    outputs = [
      "{{source_out_dir}}/{{target_output_name}}.{{source_name_part}}.o",
    ]
  }
  tool("cxx") {
    depfile = "{{output}}.d"
    command = "$mchp_cxx -MP -MMD -MF $depfile {{defines}} {{include_dirs}} {{cflags}} {{cflags_cc}} -Wno-sign-compare -Wno-conversion -Wno-maybe-uninitialized -Wno-uninitialized -Wno-error=format= -Wno-deprecated-declarations -Wno-missing-field-initializers -Wno-unused-parameter -Wno-unused-variable -Wno-unused-function -Wno-format-nonliteral -Wno-psabi -Wno-cast-function-type -Wno-type-limits -Wno-unknown-warning-option -c {{source}} -o {{output}} -mdfp=\"$home_dir/.mchp_packs/Microchip/PIC32MZ-W_DFP/$dfp_version\""
    depsformat = "gcc"
    description = "CXX {{output}}"
    outputs = [
      "{{source_out_dir}}/{{target_output_name}}.{{source_name_part}}.o",
    ]
  }
  tool("asm") {
    depfile = "{{output}}.d"
    command = "$mchp_cxx -c -mprocessor=32MZ1025W104132 {{include_dirs}} -MP -MMD -MF $depfile -o {{output}} {{source}} -DXPRJ_default=default -Wa,--defsym=__MPLAB_BUILD=1,--gdwarf-2 -mdfp=\"$home_dir/.mchp_packs/Microchip/PIC32MZ-W_DFP/$dfp_version\""
    depsformat = "gcc"
    description = "as {{output}}"
    outputs = [
      "{{source_out_dir}}/{{target_output_name}}.{{source_file_part}}.o",
    ]
  }
  
  tool("alink") {
    rspfile = "{{output}}.rsp"
    command = "rm -f {{output}} && $mchp_ar rcs {{output}} @$rspfile"
    description = "AR {{target_output_name}}{{output_extension}}"
    rspfile_content = "{{inputs}}"
    outputs = [
      "{{target_out_dir}}/{{target_output_name}}{{output_extension}}",
    ]
    default_output_extension = ".a"
    output_prefix = "lib"
  }
  tool("solink") {
    soname = "{{target_output_name}}{{output_extension}}"
    rspfile = soname + ".rsp"
    command = "$mchp_cxx -shared xxx {{ldflags}} -o $soname -Wl,-soname=$soname @$rspfile"
    rspfile_content = "-Wl,--whole-archive {{inputs}} {{solibs}} -Wl,--no-whole-archive {{libs}}"
    description = "SOLINK $soname"
    default_output_extension = ".so"
    outputs = [
      soname,
    ]
    link_output = soname
    depend_output = soname
    output_prefix = "lib"
  }
  tool("link") {
    outfile = "{{target_output_name}}{{output_extension}}"
    rspfile = "$outfile.rsp"
    #linker_script = "${wfi32_sdk_root}/firmware/src/config/pic32mz_w1_curiosity/p32MZ1025W104132.ld"
    linker_script = "${wfi32_sdk_root}/firmware/src/config/pic32mz_w1_curiosity/$linker_file"
    linker_script_path = rebase_path(linker_script, root_build_dir) 
    wifi_lib = "${wfi32_sdk_root}/firmware/src/config/pic32mz_w1_curiosity/driver/wifi/pic32mzw1/lib/pic32mzw1.a"
    wifi_lib_path = rebase_path(wifi_lib, root_build_dir) 
    command = "$mchp_cxx -mprocessor=32MZ1025W104132 -mmicromips -o $outfile {{inputs}} ${wifi_lib_path} -DXPRJ_default=default -Wl,--defsym=__MPLAB_BUILD=1,--script=${linker_script_path},--defsym=_min_heap_size=512,--gc-sections,--no-code-in-dinit,--no-dinit-in-serial-mem,-Map=\"./pic32mzw1.map\",--report-mem,--cref,--memorysummary,./memoryfile.xml -mdfp=\"$home_dir/.mchp_packs/Microchip/PIC32MZ-W_DFP/$dfp_version\""
    description = "LINK $outfile"
    rspfile_content = "{{inputs}}"
    outputs = [
      outfile,
    ]
  }
  tool("stamp") {
    command = "touch {{output}}"
    description = "STAMP {{output}}"
  }
  tool("copy") {
    command = "cp -af {{source}} {{output}}"
    description = "COPY {{source}} {{output}}"
  }
}

#gcc_toolchain("wfi32") {
#  ar = mchp_ar
#  cc = mchp_cc
#  cxx = mchp_cxx
#
#  toolchain_args = {
#    current_os = "freertos"
#    current_cpu = mchp_cpu
#    is_clang = false
#    #import("//config/mchp/args.gni")
#    import("${chip_root}/config/mchp/args.gni")
#  }
#}
