# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
#import("//build_overrides/freertos.gni")
#import("${freertos_root}/freertos.gni")

import("//build_overrides/wfi32_sdk.gni")
#import("${wfi32_sdk_build_root}/wfi32_sdk.gni")
import("//build_overrides/mbedtls.gni")

import("${chip_root}/src/platform/device.gni")
import("${chip_root}/config/mchp/args.gni")

print("XXX WFI32 Platform")
assert(chip_device_platform == "wfi32")

#freertos_target("freertos") {
#  sources = [
#    "${freertos_root}/repo/portable/MPLAB/PIC32MZ/port.c",
#  ]

#}
declare_args() {
  # Build with OTA features
  #enable_ota=
}


static_library("wfi32") {
  print("XXX WFI32 Platform log2")
  sources = [
    "../SingletonConfigurationManager.cpp",
    "CHIPDevicePlatformEvent.h",
    "ConfigurationManagerImpl.cpp",
    "ConfigurationManagerImpl.h",
    "ConnectivityManagerImpl.cpp",
    "ConnectivityManagerImpl.h",
    "DeviceInstanceInfoProviderImpl.h",
    "DiagnosticDataProviderImpl.cpp",
    "DiagnosticDataProviderImpl.h",
    "DnssdImpl.cpp",
    "KeyValueStoreManagerImpl.cpp",
    "KeyValueStoreManagerImpl.h",
    "PlatformManagerImpl.cpp",
    "PlatformManagerImpl.h",
    "CHIPPlatformConfig.h",
    "SystemPlatformConfig.h",
    "LwIPCoreLock.cpp",
    "NetworkCommissioningWiFiDriver.cpp",
    "Logging.cpp",
    "CHIPMem-Platform.cpp",
    "PIC32MZW1Config.cpp",
    "PIC32MZW1Utils.cpp",
  ]
  
  #include_dirs = [ "${chip_root}/third_party/freertos/repo/include/" ]
  public_deps = [
    "${wfi32_sdk_root}:wfi32_sdk",
    "${chip_root}/src/lib/dnssd:platform_header",
    "${chip_root}/src/platform:platform_base",
    ##"${mbedtls_root}:mbedtls",
    #"${freertos_root}:freertos",
    #":freertos",
  ]

   
  #defines = [
  #    "MBEDTLS_CONFIG_FILE=<matter_mbedtls_config.h>",
  #] 
  include_dirs = [ 
    "${chip_root}/src/platform/wfi32",
    "${wfi32_sdk_root}", 
    "${wfi32_sdk_root}/firmware/src/config/pic32mz_w1_curiosity/driver/wifi/pic32mzw1", 
    "${wfi32_sdk_root}/firmware/src/config/pic32mz_w1_curiosity/", 
  ]
  
  sources += [
    "OTAImageProcessorImpl.cpp",
    "OTAImageProcessorImpl.h"
  ]
  defines = [ 
    "PIC32MZW1_OTA"
  ]


}
